<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create"
    android:background="@drawable/grad"
    >

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"

        android:layout_marginTop="148dp"
        android:autofillHints=""
        android:textColor="#ffffff"
        android:textColorHint="#fff"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"

        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textColorHint="#fff"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText4"
        android:layout_marginTop="6dp"
        android:autofillHints=""
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#fff"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText5"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textColor="#ffffff"
        android:textColorHint="#fff"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText6"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/set_password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#fff"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText7"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#fff"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button3"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText8"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button2"
        android:scaleX=".8"
        android:scaleY=".8"
        android:text="@string/create"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/to_continue_to_application"
         />

</RelativeLayout>