<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/grad"
    >


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:scaleX="1"
        android:scaleY="1"
        android:textColor="#ffffff"
        android:textColorHint="#fff"
        tools:targetApi="o"

        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerVertical="true"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:autofillHints=""
        android:textColorHint="#fff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button2"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button2"
        android:scaleX=".8"
        android:scaleY=".8"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/has"
        android:scaleY=".5"
        android:scaleX=".5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/editText"
        android:contentDescription="@string/todo" />




</RelativeLayout>
